--- a/index.hbs
+++ b/index.hbs
@@ -21,7 +21,8 @@
 {{! The main content area on the homepage }}
 <main id="content" class="content" role="main">
 
-  {{! The tag below includes the post loop - partials/loop.hbs }}
-  {{> "loop"}}
+  <div id="wrap">
+    {{> "loop"}}
+  </div>
 
 </main>
