--- a/page.hbs
+++ b/page.hbs
@@ -16,16 +16,20 @@
 </header>
 
 <main class="content" role="main">
-  <article class="{{post_class}}">
 
-    <header class="post-header">
-      <h1 class="post-title">{{title}}</h1>
-    </header>
+  <div id="wrap">
+    <article class="{{post_class}}">
 
-    <section class="post-content">
-      {{content}}
-    </section>
+      <header class="post-header">
+        <h1 class="post-title">{{title}}</h1>
+      </header>
 
-  </article>
+      <section class="post-content">
+        {{content}}
+      </section>
+
+    </article>
+  </div>
+  
 </main>
 {{/post}}
