--- a/tag.hbs
+++ b/tag.hbs
@@ -26,7 +26,8 @@
 {{! The main content area on the homepage }}
 <main class="content" role="main">
 
-  {{! The tag below includes the post loop - partials/loop.hbs }}
-  {{> "loop"}}
+  <div id="wrap">
+    {{> "loop"}}
+  </div>
 
 </main>
